--- a/ProjectBank/Client/Shared/NavMenu.razor
+++ b/ProjectBank/Client/Shared/NavMenu.razor
@@ -46,7 +46,7 @@
 </div>
 
 @code {
-    private string[]? favorites = {"Test", "Fun", "øl-tid"};
+    private string[]? favorites = {"Test", "Fun", "øl-tid"}; @*Skal blive til en liste af projecter hvor liked = true*@
 
 
 
