--- a/ProjectBank/Client/wwwroot/css/app.css
+++ b/ProjectBank/Client/wwwroot/css/app.css
@@ -5,6 +5,7 @@ html, body {
     background-color: #212121;
 }
 
+
 main{
     
     color: #ffffff;
@@ -65,6 +66,17 @@ a, .btn-link {
     color: white;
 }
 
-    .blazor-error-boundary::after {
-        content: "An error has occurred."
-    }
+.blazor-error-boundary::after {
+    content: "An error has occurred."
+}
+
+::-webkit-scrollbar {
+    width: 20px;
+    height: 30px;
+    color: #8d8d8d;
+}
+
+::-webkit-scrollbar-track {
+    background: #212121; 
+}
+
