--- a/ProjectBank/Client/wwwroot/css/app.css
+++ b/ProjectBank/Client/wwwroot/css/app.css
@@ -2,10 +2,12 @@
 
 html, body {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    background-color: #212121;
 }
 
+
 main{
-    background-color: #212121;
+    
     color: #ffffff;
 }
 
@@ -64,6 +66,17 @@ a, .btn-link {
     color: white;
 }
 
-    .blazor-error-boundary::after {
-        content: "An error has occurred."
-    }
+.blazor-error-boundary::after {
+    content: "An error has occurred."
+}
+
+::-webkit-scrollbar {
+    width: 20px;
+    height: 30px;
+    color: #8d8d8d;
+}
+
+::-webkit-scrollbar-track {
+    background: #212121; 
+}
+
