--- a/ProjectBank/Client/wwwroot/css/app.css
+++ b/ProjectBank/Client/wwwroot/css/app.css
@@ -80,3 +80,32 @@ a, .btn-link {
     background: #212121; 
 }
 
+hr{
+    background-color:#d7d7d7;
+    width: 80%;
+    margin: 0 10% 0 10%;
+}
+
+.centered {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    transform: -webkit-translate(-50%, -50%);
+    transform: -moz-translate(-50%, -50%);
+    transform: -ms-translate(-50%, -50%);
+  }
+
+  
+::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+    color: #212121;
+    opacity: 1; /* Firefox */
+}
+      
+::-ms-input-placeholder { /* Internet Explorer 10-11 */
+    color: #212121;
+}
+      
+::-ms-input-placeholder { /* Microsoft Edge */
+    color: #212121;
+}
