Small fixes and authorization on settings

--- a/ProjectBank/Client/Pages/AccountSettings.razor
+++ b/ProjectBank/Client/Pages/AccountSettings.razor
@@ -3,6 +3,8 @@
 
 <!---- USINGS ATTRIBUTES AND INJECTIONS  ---->
 @inject NavigationManager uriHelper;
+@using Microsoft.AspNetCore.Authorization
+@attribute [Authorize]
 
 <PageTitle>Settings</PageTitle>
 
