--- a/ProjectBank/Client/Pages/Browse.razor
+++ b/ProjectBank/Client/Pages/Browse.razor
@@ -1,4 +1,7 @@
-﻿@page "/"
+@page "/browse"
+@page "/" 
+@* @page "/" burde redirect til page "/browse"* *@
+
 
 <PageTitle>ProjectBank - Browse</PageTitle>
 
