--- a/ProjectBank/Client/Shared/NavMenu.razor
+++ b/ProjectBank/Client/Shared/NavMenu.razor
@@ -1,6 +1,6 @@
 ﻿<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href=""><img src="Logo_white_projectBank.png" height="75%" width="75%"/></a>
+        <a class="navbar-brand" href="/browse"><img src="Logo_white_projectBank.png" height="75%" width="75%"/></a>
         <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -10,7 +10,7 @@
 <div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
     <nav class="flex-column">
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
+            <NavLink class="nav-link" href="/browse" Match="NavLinkMatch.All">
                 <span class="oi oi-globe" aria-hidden="true"></span> Browse
             </NavLink>
         </div>
@@ -40,7 +40,7 @@
     }else{
         @foreach (var favorite in favorites)
         {
-            <ul onclick="window.open(https://youtube.com)">@favorite</ul>   
+            <ul onclick="location.href='https://youtube.com'">@favorite</ul>   
         }
     }
 </div>
