- Try to access api from frontend. Fail - Add roles using guide from lecture. - add Claims.razor for testing

--- a/ProjectBank/Client/Pages/Search.razor
+++ b/ProjectBank/Client/Pages/Search.razor
@@ -4,7 +4,7 @@
 
 <div class="searchBar_wrapper">
     <input type="text" class="searchBar" runat="server" name="Search_input" placeholder="Search... Project Title, Supervisor, or #Keyword">
-    <button class="btn_search" onclick="#"> <span class="oi oi-magnifying-glass" style="color: #212121;" aria-hidden="true"></span></button>
+    <button class="btn_search" onclick=""> <span class="oi oi-magnifying-glass" style="color: #212121;" aria-hidden="true"></span></button>
 </div>
 
 
