--- a/ProjectBank/Client/_Imports.razor
+++ b/ProjectBank/Client/_Imports.razor
@@ -9,5 +9,6 @@
 @using Microsoft.JSInterop
 @using ProjectBank.Client
 @using ProjectBank.Client.Shared
+@using ProjectBank.Core
 @using Radzen
 @using Radzen.Blazor
