--- a/ProjectBank/Client/Pages/Browse.razor
+++ b/ProjectBank/Client/Pages/Browse.razor
@@ -1,5 +1,7 @@
 @page "/browse"
 @page "/" 
+@using System.Net
+@inject HttpClient Http
 @* @page "/" burde redirect til page "/browse"* *@
 
 
@@ -12,13 +14,26 @@
         <div class="grid-container">
             @foreach (var keyword in keywords)
             {
-                <button class="grid-item" style="background: rgb ((new Random().Next(0, 255), (new Random().Next(0, 255), (new Random().Next(0, 255)))" >@keyword</button> @*Random color generat not working!*@
+                <button class="grid-item" >@keyword.Word</button>
             }
         </div>
     }
 
 @code{
-    private string[]? keywords = {"AI", "Software", "Database", "Security",
-         "Machine Learning", "API", ".Net", "Keyword1", "Keyword2", "Keyword3", 
-         "Keyword4", "Keyword5", "Keyword6", "Keyword7", "Keyword8", "Keyword9"};
+    /*private string[]? keywords = {"Software", "Database", "Security",
+        "API", ".Net", "Keyword1", "Keyword2", "Keyword3", 
+         "Keyword4", "Keyword5", "Keyword6", "Keyword7", "Keyword8", "Keyword9"};*/
+
+    private KeywordDto[]? keywords;
+    
+    protected override async Task OnInitializedAsync()
+    {
+       keywords = await Http.GetFromJsonAsync<KeywordDto[]?>("/api/Keyword");
+    }
+    private async Task Create(string keyword) // doesnt work
+    {
+        var response = await Http.PostAsJsonAsync("api/Keyword", new KeywordCreateDto() {Projects = new HashSet<string>(), Word = keyword});
+        Console.WriteLine(response);
+    }
+
 }
