--- a/ProjectBank/Client/Pages/Browse.razor
+++ b/ProjectBank/Client/Pages/Browse.razor
@@ -1,5 +1,6 @@
 @page "/browse"
-@page "/" 
+@using System.Net
+@inject HttpClient Http
 @* @page "/" burde redirect til page "/browse"* *@
 
 
@@ -12,13 +13,27 @@
         <div class="grid-container">
             @foreach (var keyword in keywords)
             {
-                <button class="grid-item" onclick="location.href='/swipe'"> @keyword</button>
-            } 
+                <button class="grid-item" onclick="location.href='/swipe'" >@keyword.Word</button>
+            }
+
         </div>
     }
 
 @code{
-    private string[]? keywords = {"AI", "Software", "Database", "Security",
-         "Machine Learning", "API", "DotNet", "Keyword1", "Keyword2", "Keyword3", 
-         "Keyword4", "Keyword5", "Keyword6", "Keyword7", "Keyword8", "Keyword9"};
+
+    /*private string[]? keywords = {"Software", "Database", "Security",
+        "API", ".Net", "Keyword1", "Keyword2", "Keyword3", 
+         "Keyword4", "Keyword5", "Keyword6", "Keyword7", "Keyword8", "Keyword9"};*/
+
+    private KeywordDto[]? keywords;
+    
+    protected override async Task OnInitializedAsync()
+    {
+       keywords = await Http.GetFromJsonAsync<KeywordDto[]?>("/api/Keyword");
+    }
+    private async Task Create(string keyword) // doesnt work
+    {
+        var response = await Http.PostAsJsonAsync("api/Keyword", new KeywordCreateDto() {Projects = new HashSet<string>(), Word = keyword});
+        Console.WriteLine(response);
+    }
 }
