--- a/ProjectBank/Client/_Imports.razor
+++ b/ProjectBank/Client/_Imports.razor
@@ -7,6 +7,9 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
+@using Microsoft.AspNetCore.Authorization
+@using Microsoft.AspNetCore.Components.WebAssembly.Authentication
+@using ProjectBank.Shared
 @using ProjectBank.Client
 @using ProjectBank.Client.Shared
 @using ProjectBank.Core
