- added static getUser to claims, to get azure token etc from swipe - added functionality to swipe page, st we can swipe through projects from database

--- a/ProjectBank/Client/Pages/Claims.razor
+++ b/ProjectBank/Client/Pages/Claims.razor
@@ -32,11 +32,12 @@
 @code {
     private string message = string.Empty;
     private IEnumerable<Claim> claims = Enumerable.Empty<Claim>();
+    private static ClaimsPrincipal user; //bedre måde at gøre det på? lægge i shared måske?
 
     protected override async Task OnInitializedAsync()
     {
         var authState = await AuthenticationStateProvider.GetAuthenticationStateAsync();
-        var user = authState.User;
+        user = authState.User;
 
         if (user.Identity?.IsAuthenticated == true)
         {
@@ -48,4 +49,10 @@
             message = "The user is NOT authenticated.";
         }
     }
+
+    public static ClaimsPrincipal? getUser() //skal vi ha det i shared
+    {
+        return user;
+    }
+
 }
