--- a/ProjectBank/Client/Pages/Swipe.razor
+++ b/ProjectBank/Client/Pages/Swipe.razor
@@ -3,6 +3,8 @@
 @using Radzen.Blazor.Rendering
 @using System.Security.Principal
 @using Microsoft.AspNetCore.Components.WebAssembly.Authentication
+@using System.Security.Claims
+@using System.Net
 
 <button id="GoBack_btn" onclick="location.href='/browse'">
     <label class="oi oi-arrow-circle-left"></label>
@@ -15,50 +17,43 @@
 </button>
 @*<input id="slider" type="range" min="1" max="100" value="50" onchange=""/>*@
 
-<div class="outer_box">
 
-  
-    @if (_projects == null)
-            {
-                <h1>no project to show on keyword: @keyword</h1>
-            }
-        else
-        {
-            foreach (var project in _projects)
-            {
-                currentProject = project;
-                <div class="project_builder" id="p_@_idCounter" style="z-index: @_i;">
-                    <div class="project_content">
-                        <div id="project_title">Title: @project.Title </div>
-                        <div id="supervisor">by: <x onclick="">Supervisor</x></div>
-                        <br/>
-                        <hr/>
-                        <br/>
-                        <textarea class="project_description" readonly="readonly">blah blah blah....</textarea>
-                        <br/>
-                        <hr/>
-                        <br/>
-                        <textarea class="project_keywords" readonly="readonly">#something, ..., .., ..., ...., #Keyword</textarea>
-                    </div>
-                </div>
-                _i += 10;
-                _idCounter += 1;
-            }  
-        }
-  
+@if (_projects == null)
+{
+    <h1>no project to show on keyword: @keyword</h1>
+}
+else
+{
+    <div class="outer_box">
+    <div class="project_builder" id="p_@_idCounter" style="z-index: @_i;">
+        <div class="project_content">
+            <div id="project_title">Title: @_currentProject.Title </div>
+            <div id="supervisor">by: <x onclick=""> Supervisor</x></div>
+            <br/>
+            <hr/>
+            <br/>
+            <textarea class="project_description" readonly="readonly">@_currentProject.Description</textarea>
+            <br/>
+            <hr/>
+            <br/>
+            <textarea class="project_keywords" readonly="readonly">#something, ..., .., ..., ...., #Keyword</textarea>
+        </div>
+    </div>
+    
+    </div>
+    <div class="like_and_dislike_btn_div">
+        <button id="dislike_btn" @onclick="(() => CheckClick(ClickType.Dislike))">
+            <label id="x_icon" class="oi oi-x"></label>
+        </button>
+        <button id="re-watch_btn" @onclick="(() => CheckClick(ClickType.Rewatch))">
+            <label id="re-watch_icon" class="oi oi-action-undo"></label>
+        </button>
+        <button id="like_btn" @onclick="(() => CheckClick(ClickType.Like))">
+            <label id="star_icon" class="oi oi-star"></label>
+        </button>
+    </div>
+}
 
-</div>
-<div class="like_and_dislike_btn_div">
-    <button id="dislike_btn" @onclick="(() => CheckClick(ClickType.Dislike))">
-        <label id="x_icon" class="oi oi-x"></label>
-    </button>
-    <button id="re-watch_btn" @onclick="(() => CheckClick(ClickType.Rewatch))">
-        <label id="re-watch_icon" class="oi oi-action-undo"></label>
-    </button>
-    <button id="like_btn" @onclick="addLiked">
-        <label id="star_icon" class="oi oi-star"></label>
-    </button>
-</div>
 
 @code
 {
@@ -67,24 +62,17 @@
 
     //private string[]? _Test = {"Project1", "Project2", "Project3"};
     
-    private int _i = 0;
+    private int _i = 10;
 
-    private int _idCounter = 1;
+    private int _idCounter = 0;
 
     private ProjectDto[]? _projects;
 
     private List<ProjectDto> _likedProjects;
 
-    private ProjectDto currentProject;
-
-    private void addLiked()
-    {
-        if (!_likedProjects.Contains(currentProject))
-        {
-            _likedProjects.Add(currentProject);     
-        }
-       
-    }
+    private ProjectDto _currentProject;
+    private ClaimsPrincipal? _user;
+    
 
     protected override async Task OnInitializedAsync()
     {
@@ -92,6 +80,11 @@
         {
             _projects = await Http.GetFromJsonAsync<ProjectDto[]>($"/api/Keyword/{keyword}");
             _likedProjects = new List<ProjectDto>();
+            _user = Claims.getUser();
+            if (_projects != null)
+            {
+                _currentProject = _projects.First();
+            }
         }
         catch (AccessTokenNotAvailableException e)
         {
@@ -111,13 +104,43 @@
     {
         if (s == ClickType.Like)
         {
-            
+            if (!_likedProjects.Contains(_currentProject))
+            {
+                _likedProjects.Add(_currentProject);
+
+
+    //string aToken = _user.FindFirst(c => c.Type.Contains("aud"))?.Value;
+    //put til account controller med azuread toke og projectDTO
+            }
+            _idCounter++;
+            _currentProject = _projects[(_idCounter) % _projects.Length];
         }
         if (s == ClickType.Rewatch)
         {
+            if (_likedProjects.Contains(_currentProject))
+            {
+                _likedProjects.Remove(_currentProject);
+            }
+            if (_idCounter != 0)
+            {
+                _idCounter--;
+            }
+            
+            _currentProject = _projects[(_idCounter) % _projects.Length];
+        }
+        if (s == ClickType.Dislike)
+        {
+            _idCounter++;
+            _currentProject = _projects[(_idCounter) % _projects.Length];
             
         }
+        InvokeAsync(StateHasChanged);
     }
+
+    /*private string[] getKeyWords()
+    {
+        
+    }*/
 }
     
 
