--- a/ProjectBank/Client/wwwroot/css/swipe.css
+++ b/ProjectBank/Client/wwwroot/css/swipe.css
@@ -20,7 +20,10 @@
 .outer_box{
     display: flex;
     justify-content: center;
+    align-items: center;
+    align-content: center;
 }
+
 .project_builder{
     background: #d7d7d7;
     height: 500px;
