--- a/ProjectBank/Client/Pages/Swipe.razor
+++ b/ProjectBank/Client/Pages/Swipe.razor
@@ -25,33 +25,34 @@
 else
 {
     <div class="outer_box">
-    <div class="project_builder" id="p_@_idCounter" style="z-index: @_i;">
-        <div class="project_content">
-            <div id="project_title">Title: @_currentProject.Title </div>
-            <div id="supervisor">by: <x onclick=""> Supervisor</x></div>
-            <br/>
-            <hr/>
-            <br/>
-            <textarea class="project_description" readonly="readonly">@_currentProject.Description</textarea>
-            <br/>
-            <hr/>
-            <br/>
-            <textarea class="project_keywords" readonly="readonly">#something, ..., .., ..., ...., #Keyword</textarea>
+        <div class="project_builder" id="p_@_idCounter" style="z-index: @_i;">
+            <div class="project_content">
+                <div id="project_title">Title: @_currentProject.Title </div>
+                <div id="supervisor">by: <x onclick=""> Supervisor</x></div>
+                <br/>
+                <hr/>
+                <br/>
+                <textarea class="project_description" readonly="readonly">@_currentProject.Description</textarea>
+                <br/>
+                <hr/>
+                <br/>
+                <textarea class="project_keywords" readonly="readonly">#something, ..., .., ..., ...., #Keyword</textarea>
+            </div>
         </div>
     </div>
     
-    </div>
-    <div class="like_and_dislike_btn_div">
-        <button id="dislike_btn" @onclick="(() => CheckClick(ClickType.Dislike))">
-            <label id="x_icon" class="oi oi-x"></label>
-        </button>
-        <button id="re-watch_btn" @onclick="(() => CheckClick(ClickType.Rewatch))">
-            <label id="re-watch_icon" class="oi oi-action-undo"></label>
-        </button>
-        <button id="like_btn" @onclick="(() => CheckClick(ClickType.Like))">
-            <label id="star_icon" class="oi oi-star"></label>
-        </button>
-    </div>
+        <div class="like_and_dislike_btn_div">
+            <button id="dislike_btn" @onclick="(() => CheckClick(ClickType.Dislike))">
+                <label id="x_icon" class="oi oi-x"></label>
+            </button>
+            <button id="re-watch_btn" @onclick="(() => CheckClick(ClickType.Rewatch))">
+                <label id="re-watch_icon" class="oi oi-action-undo"></label>
+            </button>
+            <button id="like_btn" @onclick="(() => CheckClick(ClickType.Like))">
+                <label id="star_icon" class="oi oi-star"></label>
+            </button>
+        </div>
+       
 }
 
 
@@ -72,6 +73,8 @@ else
 
     private ProjectDto _currentProject;
     private ClaimsPrincipal? _user;
+
+    private string _keywordString;
     
 
     protected override async Task OnInitializedAsync()
@@ -121,7 +124,7 @@ else
             {
                 _likedProjects.Remove(_currentProject);
             }
-            if (_idCounter != 0)
+            if (_idCounter != 0) //ja laver vi lige en anden løsning på - skal der komme en side op og sige du er færdig? samme gælder for når vi scroller videre
             {
                 _idCounter--;
             }
@@ -137,9 +140,10 @@ else
         InvokeAsync(StateHasChanged);
     }
 
-    /*private string[] getKeyWords()
+    /*
+    private string[] getKeyWords()
     {
-        
+        //skal hentes fra db
     }*/
 }
     
